# rugit

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.github/workflows/: ci.yml
nix/: devshell.nix  treefmt.nix
nix/checks/: pre-commit-check.nix
src/: app.rs  command.rs  config.rs  event.rs  keymap.rs  lib.rs  main.rs  theme.rs
src/app/: dwim.rs  keys.rs  mod.rs  search.rs  workers.rs
src/app/ops/: branch.rs  cherry_pick.rs  commit.rs  log.rs  merge.rs  mod.rs  rebase.rs  remote.rs  reset.rs  revert.rs  stash.rs  submodule.rs  tag.rs  worktree.rs
src/git/: client.rs  mod.rs  parse.rs  patch.rs  todo.rs  types.rs
src/ui/: build.rs  input.rs  mod.rs  pane.rs  render.rs  section.rs  transient.rs
tests/: git_integration.rs
